login & signup buttons had their width & padding improved; Sign Up no longer wraps when ultra-zoomed

--- a/styles.css
+++ b/styles.css
@@ -157,10 +157,11 @@ ul {
     margin-top: 4%;
     background-color: #4CAF50;
     color: white;
-    padding: 3% 1%;
+    padding: 3% 3%;
     border: none;
     cursor: pointer;
-    width: 30%;
+    width: 33%;
+    white-space:nowrap;
 }
 
 .login button:hover {
